# Country_Explorer_App

./: README.md  pyproject.toml
Country_Explorer/: manage.py
Country_Explorer/Country_Explorer/: asgi.py  settings.py  urls.py  wsgi.py
Country_Explorer/mainpage/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
Country_Explorer/mainpage/management/commands/: fetch_countries.py
Country_Explorer/mainpage/migrations/: 0001_initial.py  0002_alter_country_languages.py  0002_country_continents_country_currencies_and_more.py  0003_alter_country_last_updated.py
Country_Explorer/mainpage/static/mainpage/: script.js  styles.css
Country_Explorer/mainpage/templates/mainpage/: base.html
Country_Explorer/mainpage/templates/mainpage/country/: country_detail.html  country_list.html
Country_Explorer/mainpage/templates/mainpage/navbar/: nav.html
Country_Explorer/mainpage/templates/mainpage/search/: search.html  searchpopulation.html  searchregion.html  searchresults.html
Country_Explorer/mainpage/utils/: fetch_countries.py
