[project]
name = "module2-project"
version = "0.1.0"
description = ""
authors = [
    {name = "jennihunt",email = "jennihunt24@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "psycopg[binary] (>=3.2.6,<4.0.0)",
    "django-money (>=3.5.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
